--- a/styles/styles.css
+++ b/styles/styles.css
@@ -195,11 +195,11 @@ body{
     color: white;
     margin: auto;
     display: block;
-    height: 600px; 
+    height: 100%; 
 }
 @media(max-width:700px){
     .tab-item1{
-            height: 900px;
+            height: 100%;
 }
 
 }
